# PyKrige

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  circle.yml  pyproject.toml  release_notes.md  requirements.txt  requirements_setup.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
benchmarks/: kriging_benchmarks.py
doc/: Makefile  api.rst  conf.py  contents.rst  index.rst  release_notes.md  requirements.txt  requirements_doc.txt  variogram_models.rst
doc/_templates/: layout.html
docs/: Makefile  requirements_doc.txt
docs/source/: api.rst  changelog.rst  conf.py  contents.rst  variogram_models.rst
docs/source/_templates/: layout.html
docs/source/_templates/autosummary/: class.rst
docs/source/sphinxext/: github_link.py
docs/sphinxext/: github_link.py
example_notebooks/: Example kriging.ipynb  gridsampler.py
example_notebooks/meuse/: ahn.asc  ahn.rdc  ahn5m.asc  ahn5m.rdc  dist.asc  dist.rdc  ffreq.asc  ffreq.rdc  landimg2.asc  landimg2.rdc  landimg3.asc  landimg3.rdc  landimg4.asc  landimg4.rdc  landimg4_25m.rdc  landimg4_25m.tif  landsat2.rdc  lgn5.asc  lgn5.rdc  meuse.dbf  meuse.prj  meuse.shp  meuse.shx  soil.asc  soil.rdc  topomap2m.rdc  watc.asc  watc.rdc
examples/: 00_ordinary.py  01_ordinary.py  01_universal.py  02_kriging3D.py  02_universal.py  03_gstools_covmodel.py  04_krige_geometric.py  05_kriging_1D.py  06_exact_values_example_1D.py  07_regression_kriging2d.py  08_krige_cv.py  09_kriging_meuse.ipynb  10_classification_kriging2d.py  Example kriging.ipynb  exact_values_example_1D.py  gstools_covmodel.py  krige_cv.py  krige_geometric.py  kriging_1D.py  output.asc  regression_kriging.py  regression_kriging2d.py  regression_kriging3d.py
pykrige/: __init__.py  ck.py  compat.py  core.py  k3d.py  kriging_tools.py  ok.py  ok3d.py  optimise.py  rk.py  sklearn_cv.py  test.py  uk.py  uk3d.py  variogram_models.py
pykrige/example/: krige_optimiser.py
pykrige/lib/: __init__.py  cok.pyx  cuk.pyx  lapack.pyx  lapack_py3.pxd  variogram_models.pxd  variogram_models.pyx
pykrige/optimise/: README.md  krige.py  optimise.conf  pipeline.py
pykrige/test/: test1_answer.asc  test1_settings.txt  test2_answer.asc  test3_answer.asc  test_data.txt  test_pykrige.py
pykrige/test_data/: test2_settings.txt  test3_settings.txt  test3d_answer.txt
pykrige/tests/: test_api.py  test_core.py  test_regression_krige.py
pykrige/tests/test_data/: test3_dem.asc
src/pykrige/: __init__.py  ck.py  compat.py  compat_gstools.py  core.py  kriging_tools.py  ok.py  ok3d.py  rk.py  uk.py  uk3d.py  variogram_models.py
src/pykrige/lib/: __init__.py  cok.pyx  variogram_models.pxd  variogram_models.pyx
tests/: test_api.py  test_classification_krige.py  test_core.py  test_regression_krige.py
tests/test_data/: test3d_data.txt
