[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "setuptools_scm[toml]>=6.4",
    "oldest-supported-numpy",
    "scipy>=1.1.0,<2",
    "Cython>=0.28.3,<3.0",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.7"
name = "PyKrige"
description = "Kriging Toolkit for Python."
authors = [
    {name = "Benjamin S. Murphy"},
    {name = "Sebastian Müller", email = "info@geostat-framework.org"},
]
maintainers = [
    {name = "Sebastian Müller", email = "info@geostat-framework.org"},
    {name = "Roman Yurchak"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.14.5,<2",
    "scipy>=1.1.0,<2",
]

[project.optional-dependencies]
doc = [
    "gstools>=1.3,<2",
    "pillow",
    "scikit-learn>=0.19",
    "m2r2>=0.2.8",
    "matplotlib>=3",
    "meshzoo>=0.7,<1",
    "numpydoc>=1.1,<2",
    "sphinx>=3,<4",
    "sphinx-gallery>=0.8,<1",
    "sphinx-rtd-theme>=0.5,<1",
    "sphinxcontrib-napoleon",
]
plot = ["matplotlib>=3,<4"]
sklearn = ["scikit-learn>=0.19"]
test = [
    "pytest-cov>=3",
    "gstools>=1.3,<2",
    "scikit-learn>=0.19",
]

[project.urls]
Changelog = "https://github.com/GeoStat-Framework/PyKrige/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/pykrige"
Documentation = "https://pykrige.readthedocs.io"
Homepage = "https://github.com/GeoStat-Framework/PyKrige"
Source = "https://github.com/GeoStat-Framework/PyKrige"
Tracker = "https://github.com/GeoStat-Framework/PyKrige/issues"

[tool.setuptools_scm]
write_to = "pykrige/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.black]
target-version = [
    "py36",
    "py37",
    "py38",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["pykrige"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.master]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75
