[metadata]
name = PyKrige
description = Kriging Toolkit for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoStat-Framework/PyKrige
author = Benjamin S. Murphy, Sebastian Müller
author_email = info@geostat-framework.org
maintainer = Sebastian Mueller, Roman Yurchak
maintainer_email = info@geostat-framework.org
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Utilities
project_urls =
    Documentation = https://pykrige.readthedocs.io
    Source = https://github.com/GeoStat-Framework/PyKrige
    Tracker = https://github.com/GeoStat-Framework/PyKrige/issues
    Changelog = https://github.com/GeoStat-Framework/PyKrige/blob/main/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/pykrige

[options]
packages = find:
install_requires =
    numpy>=1.14.5,<2
    scipy>=1.1.0,<2
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    gstools>=1.1.1,<2
    pillow
    scikit-learn>=0.19
    m2r2>=0.2.8,<1
    matplotlib>=3,<4
    meshzoo>=0.7,<1
    numpydoc>=1.1,<2
    pykrige>=1.5,<2
    pyvista>=0.31,<1
    sphinx>=3,<4
    sphinx-gallery>=0.8,<1
    sphinx-rtd-theme>=0.5,<1
    sphinxcontrib-napoleon
plot =
    matplotlib>=3,<4
sklearn =
    scikit-learn>=0.19
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
    gstools>=1.1.1,<2
    scikit-learn>=0.19
